add util script

--- a/jsx/resources/driver-TEMPLATE.html
+++ b/jsx/resources/driver-TEMPLATE.html
@@ -35,7 +35,7 @@
 
 <body onload="start()">
 
-<h2><span id="logo">&#x2600;</span>SunSpider JavaScript Benchmark <small>(In Progress...)</small></h2>
+<h2><span id="logo">&#x2600;</span>SunSpider JavaScript Benchmark for JSX<small>(In Progress...)</small></h2>
 <h3>Content Version: @SUITE@</h3>
 
 <script src="sunspider-test-prefix.js"></script>
