--- a/jsx/resources/results-TEMPLATE.html
+++ b/jsx/resources/results-TEMPLATE.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-<h2><span id="logo">&#x2600;</span>SunSpider 1.0 JavaScript Benchmark Results</h2>
+<h2><span id="logo">&#x2600;</span>SunSpider 1.0 JavaScript Benchmark Results for JSX</h2>
 
 <h3>Content Version: @SUITE@</h3>
 
