--- a/js/hosted/sunspider.html
+++ b/js/hosted/sunspider.html
@@ -34,7 +34,7 @@
 
 <body>
 
-<h2><span id="logo">&#x2600;</span>SunSpider 1.0 JavaScript Benchmark</h2>
+<h2><span id="logo">&#x2600;</span>SunSpider 1.0 JavaScript Benchmark for JS</h2>
 
 <p>This is SunSpider, a JavaScript benchmark. This benchmark tests the
 core JavaScript language only, not the DOM or other browser APIs. It
